[package]
name = "gc2d"
version = "0.2.0"
edition = "2021"

[dependencies]
time = "0.3.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["unsafe_textures", "image", "ttf", "gfx", "mixer"]
